--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = ""
 homepage = ""
 repository = "https://github.com/Z-egorov/math-analize-RUST"
 documentation = ""
-readme = ""
+readme = "README.md"
 categories = [""]
 keywords = ["math, math-analize, mathematical functions"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
