--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ homepage = ""
 repository = "https://github.com/Z-egorov/math-analize-RUST"
 documentation = ""
 readme = "README.md"
-categories = [""]
+categories = ["Mathematics"]
 keywords = ["math", "math-analize", "mathematical functions"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
