--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/Z-egorov/math-analize-RUST"
 documentation = ""
 readme = "README.md"
 categories = ["Mathematics"]
-keywords = ["math", "math-analize", "mathematical-functions"]
+keywords = ["math", "math-analize", "ma", "analize", "math-functions"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
