--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "math-analize"
 version = "0.0.1"
 edition = "2021"
 description = "Math-Analize library will simplify your work with mathematical functions. This library is ported library from C++ for the Rust language"
-license = ""
+license = "MIT OR Apache-2.0"
 homepage = ""
 repository = "https://github.com/Z-egorov/math-analize-RUST"
 documentation = ""
