--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "Math-Analize library will simplify your work with mathematical fu
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/Z-egorov/math-analize-RUST"
 repository = "https://github.com/Z-egorov/math-analize-RUST"
-documentation = ""
+documentation = "https://docs.rs/math_analize"
 readme = "README.md"
 categories = ["Mathematics"]
 keywords = ["math", "math-analize", "ma", "analize", "math-functions"]
